k8s/java-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
      - name: java-app
        image: mandriic/java-app:c09f5e90173ec0c620ecbee6c13769d0e757637c
        ports:
        - containerPort: 8080
