k8s/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app
spec:
  ports:
  - port: 8088
    targetPort: 8080
  selector:
    app: java-app
